<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/app_name"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_quote"
      android:textColor="@color/white"
      app:layout_constraintStart_toStartOf="@+id/textView"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <View
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="3dp"
      android:layout_marginTop="15dp"
      android:background="@color/white"
      android:backgroundTint="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cameraCard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      app:cardBackgroundColor="@color/blue"
      app:cardCornerRadius="5dp"
      app:cardElevation="10dp"
      app:cardMaxElevation="12dp"
      app:cardPreventCornerOverlap="true"
      app:cardUseCompatPadding="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/divider">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txtCamera"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/uploadCenterCard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      app:cardBackgroundColor="@color/blue"
      app:cardCornerRadius="5dp"
      app:cardElevation="10dp"
      app:cardMaxElevation="12dp"
      app:cardPreventCornerOverlap="true"
      app:cardUseCompatPadding="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cameraCard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/uploadCenter"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/retrieveLogCard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      app:cardBackgroundColor="@color/blue"
      app:cardCornerRadius="5dp"
      app:cardElevation="10dp"
      app:cardMaxElevation="12dp"
      app:cardPreventCornerOverlap="true"
      app:cardUseCompatPadding="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/uploadCenterCard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/retrieveLog"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

  </androidx.cardview.widget.CardView>

  <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/bottom_navigation"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_alignParentBottom="true"
      app:itemBackground="@color/black"
      app:itemIconTint="@drawable/selector"
      app:itemTextColor="@drawable/selector"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:menu="@menu/menu_navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>